--- a/style/style.css
+++ b/style/style.css
@@ -122,7 +122,7 @@ nav li a{
 }
 .header-banner-container{
      padding-top: 300px;
-     padding-bottom: 240px;
+     padding-bottom: 300px;
      display: flex;
      justify-content: center;
      align-items: center;
@@ -159,5 +159,58 @@ nav li a{
 }
 /* header section start form here */
 /* card section start form here */
+.card-bc{
+     max-width: 1300px;
+     margin: 0 auto;
+}
+.card-container{
+     position: relative;
+     top: -200px;
+     display: flex;
+     gap: 1.5rem;
+}
+.card img{
+     width: 100%;
+     height: 100%;
+     border-radius: 20px;
+}
+.card{
+     width: 400px;
+     height: 300px;
+     border-radius: 20px;
+}
+.card-title img{
+     width: 20px;
+     height: 20px;
+     object-fit: cover;
+}
+.card-content{
+     width: 400px;
+     height: 300px;
+     top: 0;
+     left: 0;
+     position: absolute;
+     background-color: rgba(88, 85, 85, 0.891);
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+     border-radius: 20px;
+     opacity: 0;
+     transition: 0.6s;
+}
+.card-content:hover{
+     opacity: 1;
+}
+.card-title{
+     font-size: 1.6rem;
+     color: var(--bs-cyan);
+}
+.primary-title, .rating, .award{
+     color: var(--bs-gray-200);
+     font-size: 1rem;
+}
+
+
 
 /* card section end form here */
